--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -1228,30 +1228,34 @@
 }
 
 
-.table-column-popover {
-  .popover-body.show-scrollbar {
-    overflow-y: scroll !important;
-    max-height: 80vh !important;
-  }
-}
-
-
 .table-column-popover#popover-basic-2 {
-  z-index: 999 !important;
+  z-index: 11 !important;
   min-width: 280px;
-  max-height: 85vh !important;
+  display: flex !important;
+  flex-direction: column !important;
+  height: calc(100vh - 88px) !important;
+  max-height: calc(100vh - 88px) !important;
   background-color: var(--cc-surface1-surface);
 
+  .popover-header {
+    flex-shrink: 0;
+  }
+
+  .cm-scroller {
+    overscroll-behavior: unset !important;
+  }
+
   .popover-body {
+    flex: 1;
+    min-height: 0;
     display: flex;
     flex-direction: column;
     padding: 16px 0px 16px !important;
     gap: 16px !important;
-    align-self: stretch;
     // background-color: var(--slate1) !important;
     border-radius: 0;
-    overflow-y: auto;
-    max-height: calc(85vh - 40px);
+    overflow-y: auto !important;
+    overscroll-behavior: contain;
 
     .optional-properties-when-editable-true {
       // background-color: var(--slate3);
